--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -50,7 +50,7 @@
                 <p class="paragraph">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo in consequatur, amet, at officia unde libero facere delectus optio dolor porro.
                 </p>
-                <a href="#" class="btn-text">Learn Nore &rarr;</a>
+                <a href="#" class="btn-text">Learn More &rarr;</a>
             </div>
             <div class="col-1-of-2">
                 Image content
