--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
     <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
@@ -42,7 +43,7 @@
                     You're going to fall in love with nature
                 </h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo inventore veniam possimus, nam cum deserunt odit rerum corporis reprehenderit dolorem unde recusandae, eligendi et maiores, sint aspernatur magni atque odio.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo inventore veniam possimus, nam cum deserunt odit rerum corporis reprehenderit dolorem unde recusandae, eligendi et maiores, sint aspernatur magni.
                 </p>
                 <h3 class="heading-tertiary u-margin-bottom-small">
                     Live adventures like you never have before
@@ -61,8 +62,47 @@
             </div>
         </div>
 
+        </section>
 
-
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo inventore veniam possimus, nam cum deserunt odit rerum.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo inventore veniam possimus, nam cum deserunt odit rerum.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Find you way</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo inventore veniam possimus, nam cum deserunt odit rerum.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live a heathier life</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo inventore veniam possimus, nam cum deserunt odit rerum.
+                        </p>
+                    </div>
+                </div>
+            </div>
 
 
         </section>
