--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -39,7 +39,7 @@
             <h1 class="heading-primary">
                 <span class="heading-primary--main">Outdoors</span>
                 <span class="heading-primary--sub">is where life happens</span>
-            </h1><a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            </h1><a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
     <main>
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-centre-text u-margin-bottom-large">
                 <h2 class="heading-secondary">
                     Most popular tours
@@ -153,7 +153,7 @@
                                     <p class="card__rice-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now</a>
+                                <a href="#popup" class="btn btn--white">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                                     <p class="card__rice-only">Only</p>
                                     <p class="card__price-value">$497</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now</a>
+                                <a href="#popup" class="btn btn--white">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                                     <p class="card__rice-only">Only</p>
                                     <p class="card__price-value">$897</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now</a>
+                                <a href="#popup" class="btn btn--white">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -353,6 +353,38 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tpur photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
+                    booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. At lectus urna duis convallis convallis. Magna eget est lorem ipsum dolor sit
+                    amet
+                    consectetur adipiscing. Varius quam quisque id diam vel quam elementum pulvinar etiam. Integer
+                    malesuada
+                    nunc vel risus commodo viverra maecenas accumsan lacus. Cursus turpis massa tincidunt dui ut. Ante
+                    metus
+                    dictum at tempor commodo ullamcorper a. Praesent semper feugiat nibh sed pulvinar proin gravida
+                    hendrerit. Pharetra diam sit amet nisl. Sed euismod nisi porta lorem mollis aliquam. Magna fringilla
+                    urna porttitor rhoncus dolor purus non enim. Commodo nulla facilisi nullam vehicula ipsum a. Netus
+                    et
+                    malesuada fames ac turpis egestas sed tempus. Euismod nisi porta lorem mollis aliquam ut.
+                </p>
+                <a href="#" class="btn btn--green">book now</a>
+            </div>
+
+        </div>
+    </div>
 
 
     <!-- <section class="gridtest">
